samples/_failures_safe/1761727252_d461a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eecc5b73.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_eecc5b73.c:143:9: error: expected identifier at end of input
  143 |         printf("  WARNING: %.1f%%\n", (stats->
      |         ^~~~~~
./samples/SAFE/__tmp_eecc5b73.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eecc5b73.c:143:9: error: expected declaration or statement at end of input
